// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Analysis Right Click address field 1`] = `
Array [
  Object {
    "onClick": [Function],
    "text": "Whois Lookup",
    "type": "action",
  },
  Object {
    "type": "seperator",
  },
  Object {
    "onClick": [Function],
    "text": "Open details",
    "type": "action",
  },
]
`;

exports[`Analysis Right Click group by proc 1`] = `
Array [
  Object {
    "onClick": [Function],
    "text": "Query for these logs",
    "type": "action",
  },
  Object {
    "type": "seperator",
  },
  Object {
    "onClick": [Function],
    "text": "Open details",
    "type": "action",
  },
]
`;

exports[`Analysis Right Click non-address field 1`] = `
Array [
  Object {
    "onClick": [Function],
    "text": "Open details",
    "type": "action",
  },
]
`;

exports[`Log Right Click conn log with pcap support 1`] = `
Array [
  Object {
    "onClick": [Function],
    "text": "Exclude these values",
    "type": "action",
  },
  Object {
    "onClick": [Function],
    "text": "Include these values",
    "type": "action",
  },
  Object {
    "onClick": [Function],
    "text": "Count by id.orig_h",
    "type": "action",
  },
  Object {
    "type": "seperator",
  },
  Object {
    "onClick": [Function],
    "text": "Whois Lookup",
    "type": "action",
  },
  Object {
    "type": "seperator",
  },
  Object {
    "onClick": [Function],
    "text": "Download PCAPS",
    "type": "action",
  },
  Object {
    "onClick": [Function],
    "text": "Open details",
    "type": "action",
  },
]
`;

exports[`Log Right Click conn log without pcap support 1`] = `
Array [
  Object {
    "onClick": [Function],
    "text": "Exclude these values",
    "type": "action",
  },
  Object {
    "onClick": [Function],
    "text": "Include these values",
    "type": "action",
  },
  Object {
    "onClick": [Function],
    "text": "Count by id.orig_h",
    "type": "action",
  },
  Object {
    "type": "seperator",
  },
  Object {
    "onClick": [Function],
    "text": "Whois Lookup",
    "type": "action",
  },
  Object {
    "type": "seperator",
  },
  Object {
    "onClick": [Function],
    "text": "Open details",
    "type": "action",
  },
]
`;

exports[`Log Right Click dns log 1`] = `
Array [
  Object {
    "onClick": [Function],
    "text": "Exclude these values",
    "type": "action",
  },
  Object {
    "onClick": [Function],
    "text": "Include these values",
    "type": "action",
  },
  Object {
    "onClick": [Function],
    "text": "Count by query",
    "type": "action",
  },
  Object {
    "type": "seperator",
  },
  Object {
    "onClick": [Function],
    "text": "Open details",
    "type": "action",
  },
]
`;

exports[`Log Right Click time field for conn log 1`] = `
Array [
  Object {
    "onClick": [Function],
    "text": "Use as \\"start\\" time",
    "type": "action",
  },
  Object {
    "onClick": [Function],
    "text": "Use as \\"end\\" time",
    "type": "action",
  },
  Object {
    "type": "seperator",
  },
  Object {
    "onClick": [Function],
    "text": "Download PCAPS",
    "type": "action",
  },
  Object {
    "onClick": [Function],
    "text": "Open details",
    "type": "action",
  },
]
`;

exports[`Log Right Click time field for weird log 1`] = `
Array [
  Object {
    "onClick": [Function],
    "text": "Use as \\"start\\" time",
    "type": "action",
  },
  Object {
    "onClick": [Function],
    "text": "Use as \\"end\\" time",
    "type": "action",
  },
  Object {
    "type": "seperator",
  },
  Object {
    "onClick": [Function],
    "text": "Open details",
    "type": "action",
  },
]
`;
